# communication

./: CMakeLists.txt
include/udp/: udp.h
src/udp/: udp.c
src/udp/client/: udp_client.c  udp_client.h
src/udp/server/: udp_server.c  udp_server.h
tests/: client_test.c
